--- a/src/components/navigation/collection/collection.astro
+++ b/src/components/navigation/collection/collection.astro
@@ -8,9 +8,10 @@ export interface Props {
   show_home?: boolean;
   depth?: number;
   key: string;
+  d?: number;
 }
 
-const { collection, show_home = true, depth, key } = Astro.props;
+const { collection, show_home = true, depth, key, d } = Astro.props;
 
 const components: Record<string, any> = {};
 const componentImports = import.meta.glob(
@@ -105,6 +106,9 @@ const tree = getTree(await getCollection(collection), {
   depth,
 });
 const items = Object.values(tree.children).flatMap(createNavBlock);
+
+
+const _d = d !== undefined;
 ---
 
 <>
@@ -115,8 +119,16 @@ const items = Object.values(tree.children).flatMap(createNavBlock);
       if (item.id === "" && !show_home) return;
 
       if (Component) {
-        return <Component {...item} key={(key || "") + "-" + i.toString()} />;
+        return (<div class:list={["navigation-item", {[`d${d}`]: _d}]} data-component={item._bookshop_name}>
+          <Component d={(_d && d + 1) || undefined} {...item} key={(key || "") + "-" + i.toString()} />
+        </div>);
       }
     })
   }
 </>
+
+<style>
+  .navigation-item {
+    display: contents;
+  }
+</style>
