--- a/src/layouts/Section.astro
+++ b/src/layouts/Section.astro
@@ -431,6 +431,10 @@ const expando = classList.includes("expando") ? true : false;
   section.image figure > img {
     position: absolute;
   }
+
+  main > section:first-of-type:not(.columns, .slider) > .component-wrapper {
+    margin-top: calc(var(--header-height) - var(--header-content-offset));
+  }
 </style>
 
 <script>
