fix: gallery default style specificity tweak

--- a/src/components/gallery/gallery.astro
+++ b/src/components/gallery/gallery.astro
@@ -132,7 +132,7 @@ const id = `gallery-${key}`;
         cursor: pointer;
     }
 
-    section.gallery .gallery-grid {
+    :where(section.gallery) .gallery-grid {
         &.no-indent {
             padding: var(--gallery-gap);
         }
