--- a/src/components/flipbook/flipbook.astro
+++ b/src/components/flipbook/flipbook.astro
@@ -239,7 +239,7 @@ async function setupFlipbook() {
 
         if (!context) throw Error("Canvas context missing");
 
-        const renderTask = page.render({canvasContext: context, viewport}).promise;
+        const renderTask = page.render({canvas, canvasContext: context, viewport}).promise;
         const textContent = page.getTextContent().then(async (textContent: any) => {
           if (!text) return;
 
