--- a/src/components/layout/columns/columns.astro
+++ b/src/components/layout/columns/columns.astro
@@ -66,8 +66,8 @@ if (layout?.length) {
       const firstColumn = start === 1;
       const lastColumn = j + 1 === rowLayout;
 
-      // const columnString = `${firstColumn ? start : start + 1} / span ${subcolumn + Number(firstColumn) + Number(lastColumn)}`;
-      const columnString = `${start} / span ${subcolumn}`;
+      const columnString = `${firstColumn ? start : start + 1} / span ${subcolumn + Number(firstColumn) + Number(lastColumn)}`;
+      // const columnString = `${start} / span ${subcolumn}`; // Disable max-width padding columns
       const rowString = `${row} / span 1`;
       const cell = {
         "first-in-row": firstColumn,
@@ -120,17 +120,16 @@ let items = layoutBlocks.length ? layoutBlocks : contentBlocks;
   div.columns {
     display: grid;
     grid-auto-flow: row;
-    /* grid-template-columns:
-            calc(1fr + var(--page-max-width-padding)),
-            repeat(calc(var(--columns) - 2), minmax(min-content, 1fr)),
-            calc(1fr + var(--page-max-width-padding)); */
-    grid-template-columns: repeat(var(--columns), minmax(min-content, 1fr));
-
     background-color: rgb(var(--background-color));
+
+    grid-template-columns: var(--page-max-width-padding) var(--layout) var(--page-max-width-padding);
+    &.fullwidth {
+      grid-template-columns: 0 var(--layout) 0;
+    }
   }
 
-  div.columns.fullwidth {
-    grid-template-columns: repeat(var(--columns), minmax(min-content, 1fr));
+  :where(div.columns) {
+    --layout: repeat(var(--columns), minmax(min-content, 1fr));
   }
 
   .columns.no-indent {
@@ -156,17 +155,17 @@ let items = layoutBlocks.length ? layoutBlocks : contentBlocks;
 </style>
 
 <style is:global lang="scss">
-  .one-two > .component-wrapper > .columns {
-    grid-template-columns: calc(1fr + var(--page-max-width-padding)) calc(2fr + var(--page-max-width-padding));
+  :is(.one-two, ._twoononenarrowfirst) > .component-wrapper > .columns {
+    --layout: 1fr 2fr;
   }
-  .two-one > .component-wrapper > .columns {
-    grid-template-columns: calc(2fr + var(--page-max-width-padding)) calc(1fr + var(--page-max-width-padding));
+  :is(.two-one, ._twoonone) > .component-wrapper > .columns {
+    --layout: 2fr 1fr;
   }
   .one-three > .component-wrapper > .columns {
-    grid-template-columns: calc(1fr + var(--page-max-width-padding)) calc(3fr + var(--page-max-width-padding));
+    --layout: 1fr 3fr;
   }
   .three-one > .component-wrapper > .columns {
-    grid-template-columns: calc(3fr + var(--page-max-width-padding)) calc(1fr + var(--page-max-width-padding));
+    --layout: 3fr 1fr;
   }
 
   /* Millstream CMS Compatibility */
@@ -228,6 +227,7 @@ let items = layoutBlocks.length ? layoutBlocks : contentBlocks;
   @media only screen and (max-width: 768px) {
     div.columns.collapse.collapse {
       --columns: 1 !important;
+      /*--layout: 1fr !important;*/
       /* gap: var(--indent); */
       grid-template-columns: 1fr;
 
